opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/deepmarker/ocaml-fastws"
bug-reports: "https://github.com/deepmarker/ocaml-fastws/issues"
dev-repo: "git+https://github.com/deepmarker/ocaml-fastws"
doc: "https://deepmarker.github.io/ocaml-fastws/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.09.0"}
  "dune" {>= "1.11.4"}
  "fastws"
  "base64" {>= "3.4.0"}
  "uri-sexp" {>= "4.0.0"}
  "core" {>= "v0.15.0"}
  "async" {>= "v0.15.0"}
  "logs-async" {>= "1.1"}
  "faraday-async" {>= "0.7.2"}
  "async-uri" {>= "0.3.0"}
  "zlib" {>= "0.6"}
  "alcotest" {with-test & >= "1.2.3"}
  "alcotest-async" {with-test & >= "1.2.3"}
]
synopsis: "Fast websocket library — Async"
