opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/deepmarker/ocaml-fastws"
bug-reports: "https://github.com/deepmarker/ocaml-fastws/issues"
dev-repo: "git+https://github.com/deepmarker/ocaml-fastws"
doc: "https://deepmarker.github.io/ocaml-fastws/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
# run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.11.4"}
  "base64" {>= "3.2.0"}
  "uri-sexp" {>= "3.1.0"}
  "fastws"
  "core" {>= "v0.16.1"}
  "async" {>= "v0.16.0"}
  "logs-async" {>= "1.1"}
  "faraday-async" {>= "0.8.1"}
  "async-uri" {>= "0.2"}
  "digestif" {>= "1.1.2"}
  "zlib" {>= "0.6"}
  "alcotest" {with-test & >= "1.5.0"}
  "alcotest-async" {with-test & >= "1.5.0"}
]
synopsis: "Fast websocket library"
description: """
"""
