opam-version: "2.0"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/deepmarker/ocaml-fastws"
bug-reports: "https://github.com/deepmarker/ocaml-fastws/issues"
dev-repo: "git+https://github.com/deepmarker/ocaml-fastws"
doc: "https://deepmarker.github.io/ocaml-fastws/doc"
build: [ "dune" "build" "-j" jobs "-p" name ]
run-test: [ "dune" "runtest" "-j" jobs "-p" name ]
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "1.11.4"}
  "sexplib" {>= "v0.13.0"}
  "ppx_sexp_conv" {>= "v0.13.0"}
  "faraday" {>= "0.7.0"}
  "httpaf" {>= "0.6.5"}
  "alcotest" {with-test & >= "1.0.1"}
]
synopsis: "Fast websocket library"
description: """
"""
