(library
 (name fastws)
 (public_name fastws)
 (preprocess (pps ppx_here ppx_sexp_conv))
 (modules fastws sha1)
 (libraries logs sexplib astring base64 angstrom faraday httpaf))

(library
 (name fastws_async)
 (public_name fastws-async)
 (preprocess (pps ppx_here ppx_sexp_conv))
 (modules fastws_async)
 (libraries
  fastws
  core
  async
  logs-async
  conduit-async
  angstrom-async
  faraday-async))
