(test
 (name       test)
 (modules    test)
 (preprocess (pps ppx_sexp_conv))
 (package    fastws-async)
 (libraries
   fastws-async
   core
   async
   alcotest
   alcotest-async))

(executables
 (names leak wscat)
 (public_names leak-test wscat)
 (modules leak wscat)
 (preprocess (pps ppx_jane))
 (package fastws-async)
 (libraries logs-async-reporter fastws-async))
