(test
 (name       test)
 (modules    test)
 (preprocess (pps ppx_sexp_conv))
 (package    fastws)
 (libraries
   fastws
   alcotest))

(test
 (name       test_async)
 (modules    test_async)
 (preprocess (pps ppx_jane))
 (package    fastws-async)
 (libraries
   core
   async
   fastws-async
   alcotest
   alcotest-async))
